--- a/js13kgames2017/js13kgames2017.csproj
+++ b/js13kgames2017/js13kgames2017.csproj
@@ -24,43 +24,59 @@
   <ItemGroup>
     <Content Include="app.css" />
     <Content Include="app.js" />
+    <Content Include="gulpfile.js" />
     <Content Include="index.html" />
-    <Content Include="Scripts\app.js" />
-    <Content Include="Scripts\controls\desktop.js" />
-    <Content Include="Scripts\controls\mobile.js" />
-    <Content Include="Scripts\effects\Sounds.js" />
-    <Content Include="Scripts\effects\sprites.js" />
-    <Content Include="Scripts\errors\notImplementedError.js" />
-    <Content Include="Scripts\errors\undefinedCollisionTypeError.js" />
-    <Content Include="Scripts\game.js" />
-    <Content Include="Scripts\gui.js" />
-    <Content Include="Scripts\Levels\level1.js" />
-    <Content Include="Scripts\Levels\level2.js" />
-    <Content Include="Scripts\objects\base\baseObject.js" />
-    <Content Include="Scripts\objects\base\circleGameObject.js" />
-    <Content Include="Scripts\objects\base\gameObject.js" />
-    <Content Include="Scripts\objects\base\pointGameObject.js" />
-    <Content Include="Scripts\objects\base\rectangleGameObject.js" />
-    <Content Include="Scripts\objects\gameConstants.js" />
-    <Content Include="Scripts\objects\game\brick.js" />
-    <Content Include="Scripts\objects\game\bullet.js" />
-    <Content Include="Scripts\objects\game\node.js" />
-    <Content Include="Scripts\objects\game\player.js" />
-    <Content Include="Scripts\objects\game\powerups\ammoPowerup.js" />
-    <Content Include="Scripts\objects\game\powerups\basePowerup.js" />
-    <Content Include="Scripts\objects\game\powerups\hidePowerup.js" />
-    <Content Include="Scripts\objects\game\powerups\speedPowerup.js" />
-    <Content Include="Scripts\objects\game\spider.js" />
-    <Content Include="Scripts\objects\objectTypes.js" />
-    <Content Include="Scripts\objects\shapeTypes.js" />
-    <Content Include="Scripts\tools\audio.js" />
-    <Content Include="Scripts\tools\grid.js" />
-    <Content Include="Scripts\tools\Math2D.js" />
-    <Content Include="Scripts\tools\raytracing.js" />
-    <Content Include="Scripts\tools\sfxr.js" />
-    <Content Include="Scripts\tools\utils.js" />
-    <None Include="Scripts\_references.js" />
+    <Content Include="src\app.js" />
+    <Content Include="src\controls\desktop.js" />
+    <Content Include="src\controls\mobile.js" />
+    <Content Include="src\effects\Sounds.js" />
+    <Content Include="src\effects\sprites.js" />
+    <Content Include="src\errors\notImplementedError.js" />
+    <Content Include="src\errors\undefinedCollisionTypeError.js" />
+    <Content Include="src\game.js" />
+    <Content Include="src\gui.js" />
+    <Content Include="src\Levels\level1.js" />
+    <Content Include="src\Levels\level2.js" />
+    <Content Include="src\objects\base\baseObject.js" />
+    <Content Include="src\objects\base\circleGameObject.js" />
+    <Content Include="src\objects\base\gameObject.js" />
+    <Content Include="src\objects\base\pointGameObject.js" />
+    <Content Include="src\objects\base\rectangleGameObject.js" />
+    <Content Include="src\objects\gameConstants.js" />
+    <Content Include="src\objects\game\brick.js" />
+    <Content Include="src\objects\game\bullet.js" />
+    <Content Include="src\objects\game\node.js" />
+    <Content Include="src\objects\game\player.js" />
+    <Content Include="src\objects\game\powerups\ammoPowerup.js" />
+    <Content Include="src\objects\game\powerups\basePowerup.js" />
+    <Content Include="src\objects\game\powerups\hidePowerup.js" />
+    <Content Include="src\objects\game\powerups\speedPowerup.js" />
+    <Content Include="src\objects\game\spider.js" />
+    <Content Include="src\objects\objectTypes.js" />
+    <Content Include="src\objects\shapeTypes.js" />
+    <Content Include="src\tools\audio.js" />
+    <Content Include="src\tools\grid.js" />
+    <Content Include="src\tools\Math2D.js" />
+    <Content Include="src\tools\raytracing.js" />
+    <Content Include="src\tools\sfxr.js" />
+    <Content Include="src\tools\utils.js" />
+    <None Include="src\_references.js" />
+    <Content Include="systemjs.debug.conf.js" />
+    <Content Include="systemjs.dist.conf.js" />
+    <Content Include="tasks\browser-sync.js" />
+    <Content Include="tasks\build-debug.js" />
+    <Content Include="tasks\build-dist.js" />
+    <Content Include="tasks\clean.js" />
+    <Content Include="tasks\compile.js" />
+    <Content Include="tasks\pack-assets.js" />
+    <Content Include="tasks\pack-tilemap.js" />
+    <Content Include="tasks\watch-assets.js" />
+    <Content Include="tasks\watch-tilemap.js" />
+    <Content Include="tasks\watch.js" />
     <Content Include="web.config" />
+    <Content Include="package.json" />
+    <Content Include="src\tsconfig.json" />
+    <None Include="_references.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="web.Debug.config">
